--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+# Existing dependencies
 python-dotenv>=1.0.0
 mysql-connector-python>=8.2.0
 asyncio>=3.4.3
+python-dateutil>=2.8.0
 
 # Configuration and Parsing
 pyyaml>=6.0  # For YAML configuration parsing
@@ -11,3 +13,13 @@ python-magic>=0.4.27  # For file type detection
 defusedxml>=0.7.1  # For secure XML parsing
 python-clamd>=1.0.2  # For ClamAV integration
 dkimpy>=1.1.4  # For DKIM verification
+
+# Testing dependencies
+pytest>=7.4.0
+pytest-asyncio>=0.23.0  # For async test support
+pytest-cov>=4.1.0  # For coverage reporting
+pytest-mock>=3.12.0  # For better mocking support
+
+# Development tools
+black>=23.9.1  # Code formatter
+pylint>=3.0.1  # Code linter
